// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should list 1 active job 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 1

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0
"
`;

exports[`should list 1 active job 2`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 1

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"2dc07c0ff9d27ef5\\"} 0
"
`;

exports[`should list 1 completed job 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"7cc276b43bb43656\\"} 1

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"7cc276b43bb43656\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"7cc276b43bb43656\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"7cc276b43bb43656\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"7cc276b43bb43656\\"} 0
"
`;

exports[`should list 1 completed job with delay 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary
test_stat_complete_duration{quantile=\\"0.01\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.05\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.5\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.9\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.95\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.99\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration{quantile=\\"0.999\\",prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration_sum{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1000
test_stat_complete_duration_count{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 1

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"672d03e07bff9cd3\\"} 0
"
`;

exports[`should list 1 delayed job 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"4f2249f79c9d68b5\\"} 0

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"4f2249f79c9d68b5\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"4f2249f79c9d68b5\\"} 1

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"4f2249f79c9d68b5\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"4f2249f79c9d68b5\\"} 0
"
`;

exports[`should list 1 failed job 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"dd304535bf11c117\\"} 0

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"dd304535bf11c117\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"dd304535bf11c117\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"dd304535bf11c117\\"} 1

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"dd304535bf11c117\\"} 0
"
`;

exports[`should list 1 queued job 1`] = `
"# HELP test_stat_completed Number of completed messages
# TYPE test_stat_completed gauge
test_stat_completed{prefix=\\"test-queue\\",queue=\\"54cceb2dc1d55935\\"} 0

# HELP test_stat_complete_duration Time to complete jobs
# TYPE test_stat_complete_duration summary

# HELP test_stat_active Number of active messages
# TYPE test_stat_active gauge
test_stat_active{prefix=\\"test-queue\\",queue=\\"54cceb2dc1d55935\\"} 0

# HELP test_stat_delayed Number of delayed messages
# TYPE test_stat_delayed gauge
test_stat_delayed{prefix=\\"test-queue\\",queue=\\"54cceb2dc1d55935\\"} 0

# HELP test_stat_failed Number of failed messages
# TYPE test_stat_failed gauge
test_stat_failed{prefix=\\"test-queue\\",queue=\\"54cceb2dc1d55935\\"} 0

# HELP test_stat_waiting Number of waiting messages
# TYPE test_stat_waiting gauge
test_stat_waiting{prefix=\\"test-queue\\",queue=\\"54cceb2dc1d55935\\"} 1
"
`;
